--- a/css/style.css
+++ b/css/style.css
@@ -30,21 +30,9 @@ h2 {
     font-weight: 600;
     color: #956138;
 }
-h3{
-
-}
-h4 {
-
-}
-h5 {
-
-}
 h6 {
     font-weight: 500;
     color: #B27748;
-}
-p {
-
 }
 
 /* Navbar */
@@ -76,6 +64,13 @@ p {
     border-radius: 8px;
     box-shadow: 0px 6px 25px #FFB880CC
 }
+.btn-language {
+    background: #FFCDA6;
+    border-radius: 65px;
+    width: 101.5px;
+    height: 46.5px;
+    margin-top: 18px;
+}
 .btn-log {
     background-image: linear-gradient(#FFB880, #CF8E5B);
     border-radius: 8px;
@@ -103,6 +98,10 @@ p {
     box-shadow: -3px -3px 6px #E7D6C6,
                 3px 3px 6px #E7D6C6
 }
+.navbar img {
+    width: auto;
+    height: 100%;
+}
 
 /* Home Start */
 #home{
@@ -113,10 +112,12 @@ p {
     width: auto;
 }
 #home h1 {
-    margin-top: 12vh;
+    margin-top: 24vh;
+    padding-top: 16vh;
 }
 #home .btn-primary {
-    margin-bottom: 12hv;
+    margin-top: 8vh;
+    margin-bottom: 28vh;
 }
 
 
@@ -312,10 +313,15 @@ p {
 /* Support Start */
 #support {
     background-image: linear-gradient(to left, #E2C7B3, #FBEFE1, #E2C7B3);
+    padding-top: 15%;
+    padding-bottom: 162px;
 }
 #support img {
     width: auto;
-    height: 100%;
+    height: 495px;
+    position: absolute;
+    left: 35%;
+    transform: translate(-100%, -50%);
 }
 form {
     background: #F2E3D5;
@@ -467,6 +473,25 @@ body {
         margin-top: 0vh;
         margin-bottom: 0vh;
     }
+    #support img {
+        left: 60%;
+        transform: translate(-100%, -50%);
+    }
+    #support h3 {
+        padding-left: 150px;
+    }
+    #support p {
+        padding-left: 150px;
+    }
+    #support form{
+        margin-left: 78px;
+    }
+    #support {
+        padding-bottom: 12px;
+    }
+    footer {
+        margin-top: 12vh;
+    }
 }
 
 /* Responsive Smartphone */
@@ -491,16 +516,32 @@ body {
     .btn-add {
         width: 5vh;
         height: 5vh;
+        margin-left: 64px;
     }
     .btn-min {
         width: 5vh;
         height: 5vh;
     }
     .btn-fav {
-        
+        margin-right: 32px;
     }
     #buying h3 {
         margin-left: 0px;
     }
-    
+    #support img {
+        left: 100%;
+        transform: translate(-100%, -10%);
+    }
+    #support h3 {
+        padding-top: 480px;
+    }
+    #support form{
+        margin-top: 14px;
+    }
+    #support {
+        padding-bottom: 32px;
+    }
+    footer {
+        margin-top: 12vh;
+    }
 }
